[package]
name = "ca_annealig"
version = "0.1.0"
authors = ["Marcin Pieczka <marcin.pieczka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]

[lib]
name = "ca_annealig"
crate-type = ["cdylib"]